--- a/templates/users/reads.html
+++ b/templates/users/reads.html
@@ -1,6 +1,14 @@
 {% extends "nav_template.html"%}
 
 <title>회원 상세보기</title>
+
+<link href="https://cdn.jsdelivr.net/npm/quill@2.0.0-beta.0/dist/quill.snow.css" rel="stylesheet" />
+<!-- Quill 편집기의 스타일 지정 -->
+<style>
+    #editor {
+        height: 10rem;
+    }
+</style>
 {% block main_container %}
 
 <h2>회원 상세보기</h2>
@@ -18,8 +26,8 @@
     </div>
     <div class="form-check mb-3">
         <label class="form-check-label">
-            <input class="form-check-input" type="checkbox" name="manager" disabled
-            {{ 'checked' if user.manager=='on' else '' }} > 관리자 여부
+            <input class="form-check-input" type="checkbox" name="manager" disabled {{ 'checked' if user.manager=='on'
+                else '' }}> 관리자 여부
             <!-- 그냥 manager가 아니라 user 딕셔너리 안에 있는 것이기 때문에 user.manager로 사용. manager라는 것이 on인지 아닌지 -->
         </label>
     </div>
@@ -33,10 +41,10 @@
     <div class="mb-3">
         <label for="sel1" class="form-label">Select list (select one):</label>
         <select class="form-select" id="sel1" name="sellist1" disabled>
-            <option value = 'option1' {{ 'selected' if user.sellist1=="Option1" else '' }} >1</option>
-            <option value = 'option2' {{ 'selected' if user.sellist1=="Option2" else '' }}>2</option>
-            <option value = 'option3' {{ 'selected' if user.sellist1=="Option3" else '' }}>3</option>
-            <option value = 'option4' {{ 'selected' if user.sellist1=="Option4" else '' }}>4</option>
+            <option value='option1' {{ 'selected' if user.sellist1=="Option1" else '' }}>1</option>
+            <option value='option2' {{ 'selected' if user.sellist1=="Option2" else '' }}>2</option>
+            <option value='option3' {{ 'selected' if user.sellist1=="Option3" else '' }}>3</option>
+            <option value='option4' {{ 'selected' if user.sellist1=="Option4" else '' }}>4</option>
         </select>
 
     </div>
@@ -46,9 +54,33 @@
             {{ user.text }}
         </textarea>
     </div>
+    <div>
+        <label>Comments with Quill:</label>
+        <!-- Quill 편집기를 적용할 div 요소 -->
+        <div id="editor"></div>
+    </div>
+
     <div class="text-end">
         <button type="submit" class="btn btn-primary" formaction="/users/list" formmethod="get">List</button>
         <button type="submit" class="btn btn-danger" formaction="/users/list" formmethod="post">Delete</button>
     </div>
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/quill@2.0.0-beta.0/dist/quill.js"></script>
+<script>
+    // 서버나 다른 소스에서 로드한 콘텐츠를 대표하는 가상의 데이터
+    let contentFromServer = '{{user.editorContent | safe}}';
+
+    // Quill 편집기 초기화
+    let quill = new Quill('#editor', {
+        theme: 'snow',
+        readOnly: true, // 읽기 전용으로 설정
+        modules: {
+            toolbar: false // 툴바 비활성화
+        }
+    });
+
+    // 서버에서 가져온 콘텐츠로 편집기를 채움
+    quill.root.innerHTML = contentFromServer;
+</script>
 {% endblock %}
